# momoi

./: Cargo.toml
assets/v1/: 1.txt  2.txt  3.txt  4.txt  5.txt
assets/v2/: 1.txt  2.txt  3.txt  4.txt  5.txt
assets/v3/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
src/: assets.rs  main.rs
